--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,2 @@
-REACT_APITOKEN=Online UUID Generator
-REACT_APIURL=http://127.0.0.1:3000
+REACT_APP_APITOKEN=Online UUID Generator
+REACT_APP_APIURL=http://127.0.0.1:3000
